// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute realized-vol endpoint default should return success 1`] = `
{
  "data": {
    "realVol1Day": 0.5302169,
    "realVol30Day": 0.5291809,
    "realVol7Day": 0.2474815,
  },
  "result": 0.5291809,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1641035471111,
    "providerDataRequestedUnixMs": 1641035471111,
    "providerIndicatedTimeUnixMs": 1641035400000,
  },
}
`;

exports[`execute should return 400 error with bad resultPath input 1`] = `
{
  "error": {
    "message": "[Param: resultPath] input is not one of valid options (realVol1Day,realVol7Day,realVol30Day)",
    "name": "AdapterError",
  },
  "status": "errored",
  "statusCode": 400,
}
`;

exports[`execute trades endpoint should return success 1`] = `
{
  "data": {
    "result": 4097.271668358277,
  },
  "result": 4097.271668358277,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 1641035471111,
    "providerDataRequestedUnixMs": 1641035471111,
    "providerIndicatedTimeUnixMs": 1634849580000,
  },
}
`;
